# ds-u2-actividad-1b-listasenlazadassimples-VastiBaez123

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: ControladorDispositivos.h  DispositivoBase.cpp  DispositivoBase.h  GestionSensores.cpp  HistoricoDatos.h  MedidorBarometrico.cpp  MedidorBarometrico.h  MedidorTermico.h  SensorTemperatura.cpp  main.cpp
src/Arduino/Simulador/: Simulador.ino
